# prisma-convert-case

./: Cargo.toml  README.md
src/: ir.rs  main.rs
