[package]
name = "transform-prisma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.3"
datamodel = { git = "https://github.com/prisma/prisma-engines" }
anyhow = "1.0"
indoc = "1.0"
clap = "3.0.0-beta.5"
